--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"dbhost" : "hostname",
-	"dbuser" : "username",
-	"dbpass" : "password"
+	"dbhost" : "classmysql.engr.oregonstate.edu",
+	"dbuser" : "cs340_edwarda3",
+	"dbpass" : "2165"
 }
