--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Manason/CS340-Library#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.3",
     "mysql": "^2.15.0",
     "socketio": "^1.0.0"
   }
